spacing issues sorted

--- a/css/style.css
+++ b/css/style.css
@@ -979,6 +979,10 @@ input::placeholder {
     padding-top: 3rem;
     transition: .5s;
     font-size: 1.6rem; }
+    @media only screen and (min-width: 112.5em) {
+      .review__para {
+        padding-top: 2rem;
+        font-size: 1.4rem; } }
   .review__heading {
     margin: 2rem 0 0;
     padding: 0;
